workloads/must-gather.local.2378005887078000116/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-07d359641e4827bc34e31a5cefaf986acf4e78064fef531124cac0ed6da3e94c/namespaces/openshift-authentication/route.openshift.io/routes/oauth-openshift.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: "2023-01-09T04:47:53Z"
  labels:
    app: oauth-openshift
  managedFields:
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:host: {}
        f:port:
          .: {}
          f:targetPort: {}
        f:tls:
          .: {}
          f:insecureEdgeTerminationPolicy: {}
          f:termination: {}
        f:to:
          f:kind: {}
          f:name: {}
          f:weight: {}
        f:wildcardPolicy: {}
    manager: authentication-operator
    operation: Update
    time: "2023-01-09T04:47:53Z"
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:ingress: {}
    manager: openshift-router
    operation: Update
    subresource: status
    time: "2023-01-09T04:47:53Z"
  name: oauth-openshift
  namespace: openshift-authentication
  resourceVersion: "22057"
  uid: c83a1a25-ee24-4288-9975-69788f531646
spec:
  host: oauth-openshift.apps.sn-loggvls-jsm.qe.devcluster.openshift.com
  port:
    targetPort: 6443
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: oauth-openshift
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2023-01-09T04:47:53Z"
      status: "True"
      type: Admitted
    host: oauth-openshift.apps.sn-loggvls-jsm.qe.devcluster.openshift.com
    routerCanonicalHostname: router-default.apps.sn-loggvls-jsm.qe.devcluster.openshift.com
    routerName: default
    wildcardPolicy: None
